erDiagram
    %% ==================== AUTH ====================
    USER {
        int id PK
        string username UK
        string firstName
        string lastName
        string password
        string nationalCode UK
        boolean isActive
        enum role
        datetime createdAt
        datetime updatedAt
    }

    PERMISSION {
        int id PK
        string name UK
        enum type
        datetime createdAt
        datetime updatedAt
    }

    USER_PERMISSION {
        int id PK
        int userId FK
        int permissionId FK
        datetime createdAt
        datetime updatedAt
    }

    ROLE_PERMISSION {
        int id PK
        enum role
        int permissionId FK
        string permissionName
        datetime createdAt
        datetime updatedAt
    }

    %% ==================== LEARNING ====================
    CATEGORY {
        int id PK
        string name
        string description
        int parentId FK "Self-referencing"
        datetime createdAt
        datetime updatedAt
    }

    COURSE {
        int id PK
        int categoryId FK
        string title
        string description
        string thumbnailUrl
        boolean isPublished
        datetime createdAt
        datetime updatedAt
    }

    DOCUMENT {
        int id PK
        int courseId FK
        string fileName
        string fileUrl
        string mimeType
        int sortOrder
        datetime createdAt
        datetime updatedAt
    }

    SECTION {
        int id PK
        int courseId FK
        string title
        int sectionOrder
        boolean isPublished
        datetime createdAt
        datetime updatedAt
    }

    PART {
        int id PK
        int sectionId FK
        string title
        int partOrder
        string textContent
        boolean isPublished
        datetime createdAt
        datetime updatedAt
    }

    CONTENT {
        int id PK
        int partId FK
        enum mediaType "Video | Audio"
        string mediaUrl
        int durationSeconds
        int contentOrder
        datetime createdAt
        datetime updatedAt
    }

    USER_COURSE {
        int id PK
        int userId FK
        int courseId FK
        enum status "Active|Completed|Expired|Refunded"
        float overallPercentage
        datetime enrolledAt
        datetime expiresAt
        datetime lastAccessed
        datetime createdAt
        datetime updatedAt
    }

    USER_COURSE_PART_PROGRESS {
        int id PK
        int userCourseId FK
        int partId FK
        boolean isCompleted
        int currentTimestampSec
        datetime updatedAt
    }

    %% ==================== RELATIONSHIPS ====================
    USER ||--o{ USER_PERMISSION : "has"
    PERMISSION ||--o{ USER_PERMISSION : "granted_to"
    PERMISSION ||--o{ ROLE_PERMISSION : "assigned_via"

    CATEGORY ||--o{ CATEGORY : "parent/child"
    CATEGORY ||--o{ COURSE : "categorizes"

    COURSE ||--|{ SECTION : "contains"
    COURSE ||--o{ DOCUMENT : "has_top_level_files"

    SECTION ||--|{ PART : "contains"
    PART ||--|{ CONTENT : "contains"

    USER ||--o{ USER_COURSE : "enrolls_in"
    COURSE ||--o{ USER_COURSE : "has_enrollments"

    USER_COURSE ||--o{ USER_COURSE_PART_PROGRESS : "tracks"
    PART ||--o{ USER_COURSE_PART_PROGRESS : "is_tracked_in"
